base/cluster-components/kowl/kowl-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: kowl
  labels:
    app: kowl
    app.kubernetes.io/component: kowl
    app.kubernetes.io/instance: kowl
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    deployment: kowl
